--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@ AMQP_PORT=5672
 AMQP_USER=guest
 AMQP_PASS=guest
 AMQP_VHOST=/
+AMQP_DEFAULT_TYPE_EXCHANGE=headers
+AMQP_EXCHANGE_PING=exchange-ping
+AMQP_EXCHANGE_PONG=exchange-pong
 
 INIT=ping
