--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ AMQP_VHOST=/
 AMQP_DEFAULT_TYPE_EXCHANGE=headers
 AMQP_EXCHANGE_PING=exchange-ping
 AMQP_EXCHANGE_PONG=exchange-pong
+AMQP_EXCHANGE_CONSUMER=exchange-consumer
 
 INIT=ping
